--- a/style.css
+++ b/style.css
@@ -121,10 +121,19 @@ body{
     left: 20px;
 }
 
+#mobile{
+    display: none;
+    align-items: center;
+}
+
+#close{
+    display: none;
+}
+
 /* Home Page */
 
 #hero {
-    background-image: url("img/hero4.jpg");
+    background-image: url("img/hero4.png");
     height: 90vh;
     width: 100%;
     background-size: cover;
@@ -145,7 +154,7 @@ body{
 }
 
 #hero button{
-    background-image: url("img/btn_bkg.jpg");
+    background-image: url("img/button.png");
     background-color: transparent;
     color: #088178;
     border: 0;
@@ -292,7 +301,7 @@ body{
     justify-content: center;
     align-items: center;
     text-align: center;
-    background-image: url("img/banner/b1.jpg");
+    background-image: url("img/banner/b2.jpg");
     width: 100%;
     height: 40vh;
     background-size: cover;
@@ -330,7 +339,7 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    background-image: url("img/banner/btn_bkg.jpg");
+    background-image: url("img/banner/b17.jpg");
     min-width: 48%;
     height: 50vh;
     background-size: cover;
@@ -339,7 +348,7 @@ body{
 }
 
 #sm-banner .banner-box2{
-    background-image: url("img/banner/b1.jpg");
+    background-image: url("img/banner/b10.jpg");
 }
 
 #sm-banner h4{
@@ -378,7 +387,7 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    background-image: url("img/banner/btn_bkg.jpg");
+    background-image: url("img/banner/b7.jpg");
     min-width: 30%;
     height: 30vh;
     background-size: cover;
@@ -388,11 +397,11 @@ body{
 }
 
 #banner3 .banner-box2{
-    background-image: url("img/products/p1.jpeg");
+    background-image: url("img/banner/b4.jpg");
 }
 
 #banner3 .banner-box3{
-    background-image: url("img/girl_bk.jpg");
+    background-image: url("img/banner/b18.jpg");
 }
 
 #banner3 h2{
@@ -523,4 +532,151 @@ footer a:hover{
 footer .copyright{
     width: 100%;
     text-align: center;
+}
+
+
+/* Media Query  */
+
+@media (max-width:799px) {
+    .section-p1{
+        padding: 40px 40px;
+    }
+    #navbar {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-start;
+        position: fixed;
+        top: 0;
+        right: -300px;
+        height: 100vh;
+        width: 300px;
+        background-color: #e3e6f3;
+        box-shadow: 0 40px 60px rgba(0, 0, 0, 0.01);
+        padding: 80px 0 0 10px;
+        transition: 0.3s;
+    }
+    #navbar .active{
+        right: 0px;
+    }
+    #navbar li{
+        margin-bottom: 25px;
+    }
+    #mobile {
+        display: flex;
+        align-items: center;
+    }
+
+    #mobile i{
+        color:#1a1a1a;
+        font-size: 24px;
+        padding-left: 20px;
+    }
+
+    #close{
+        display: initial;
+        position: absolute;
+        top: 30px;
+        left: 30px;
+        color: #222;
+        font-size: 24px;
+    }
+    #lg-bag{
+        display: none;
+    }
+    #hero {
+        height: 70vh;
+        padding: 0 80px;
+        background-position: top 30% right 30%;
+    }
+    #feature{
+        justify-content: center; 
+    }
+
+    #feature .fe-box{
+        margin: 15px 15px;
+    }
+
+    #product1 .pro-container{
+        justify-content: center;
+    }
+
+    #product1 .pro{
+        margin: 15px;
+    }
+
+    #banner{
+       height: 20vh; 
+    }
+    #sm-banner .banner-box{
+        min-width: 100%;
+        height: 30vh;
+    }
+    #banner3{
+        padding: 0 40px;
+    }
+    #banner3 .banner-box{
+        width: 28%;
+    }
+    #newsletter .form{
+        width: 70%;
+    }
+
+}
+
+@media (max-width: 477px){
+    #header{
+        padding: 10px 30px;
+    }
+    h1{
+        font-size: 30px;
+    }
+    h2{
+        font-size: 32px;
+    }
+    #hero{
+        padding: 0 20px;
+        background-position: 55%;
+    }
+    #feature {
+        justify-content: space-between;
+    }
+    #feature .fe-box{
+        width: 55px;
+        margin: 0 0 15px 0;
+    }
+
+    #product1 .pro{
+        width: 100%;
+    }
+    #banner{
+        height: 40vh;
+    }
+    #sm-banner .banner-box{
+        height: 40vh;
+    }
+    #sm-banner .banner-box2{
+        margin-top: 20px;
+    }
+
+    #banner3{
+        padding: 0 20px;
+    }
+    #banner3 .banner-box{
+      width: 100%;
+    }
+
+    #newsletter{
+        padding: 40px 20px;
+    }
+
+    #newsletter .form{
+        width: 100%;
+    }
+
+    footer .copyright{
+        text-align: start;
+    }
+
+
 }
