--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Spartan:wght@100;200;300;400;500;600;700;800;900&dispaly=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -6,43 +7,43 @@
     font-family: 'Spartan', sans-sarif;
 }
 
-h1{
+h1 {
     font-size: 50px;
     line-height: 64px;
     color: #222;
 }
 
-h2{
+h2 {
     font-size: 46px;
     line-height: 54px;
     color: #222;
 }
 
-h4{
+h4 {
     font-size: 20px;
     color: #222;
 }
 
-h6{
+h6 {
     font-weight: 700;
     font-size: 12px;
 }
 
-p{
+p {
     font-size: 16px;
     color: #465b52;
     margin: 15px 0 20px 0;
 }
 
-.section-p1{
+.section-p1 {
     padding: 40px 80px;
 }
 
-.section-m1{
+.section-m1 {
     margin: 40px 0;
 }
 
-button.normal{
+button.normal {
     font-size: 14px;
     font-weight: 600;
     padding: 15px 30px;
@@ -55,7 +56,7 @@ button.normal{
     transition: o.2s ease;
 }
 
-button.white{
+button.white {
     font-size: 13px;
     font-weight: 600;
     padding: 11px 18px;
@@ -67,11 +68,11 @@ button.white{
     transition: o.2s ease;
 }
 
-body{
+body {
     width: 100%;
 }
 
-#header{
+#header {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -84,19 +85,19 @@ body{
     left: 0;
 }
 
-#navbar{
+#navbar {
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-#navbar li{
+#navbar li {
     list-style: none;
     padding: 0 20px;
     position: relative;
 }
 
-#navbar li a{
+#navbar li a {
     text-decoration: none;
     font-size: 16px;
     font-weight: 600;
@@ -105,8 +106,8 @@ body{
 }
 
 
-#navbar li a:hover, 
-#navbar li a.active{
+#navbar li a:hover,
+#navbar li a.active {
     color: #088178;
 }
 
@@ -114,19 +115,19 @@ body{
 #navbar li a:hover::after {
     content: "";
     width: 30%;
-    height:2px;
+    height: 2px;
     background: #088178;
-    position:absolute;
+    position: absolute;
     bottom: -4px;
     left: 20px;
 }
 
-#mobile{
+#mobile {
     display: none;
     align-items: center;
 }
 
-#close{
+#close {
     display: none;
 }
 
@@ -145,7 +146,7 @@ body{
     justify-content: center;
 }
 
-#hero h4{
+#hero h4 {
     padding-bottom: 15px;
 }
 
@@ -153,7 +154,7 @@ body{
     color: #088178;
 }
 
-#hero button{
+#hero button {
     background-image: url("img/button.png");
     background-color: transparent;
     color: #088178;
@@ -172,10 +173,10 @@ body{
     box-shadow: 20px 20px 34px rgba(0, 0, 0, 0.03);
     border: 1px solid #cce7de;
     border-radius: 4px;
-    margin:15px 0;
+    margin: 15px 0;
 }
 
-#feature .fe-box:hover{
+#feature .fe-box:hover {
     box-shadow: 10px 10px 54px rgba(70, 62, 211, 0.01);
 }
 
@@ -187,14 +188,14 @@ body{
 }
 
 
-#feature .fe-box img{
+#feature .fe-box img {
     width: 100%;
     margin-bottom: 10px;
 }
 
 
-#feature .fe-box h6{
-    display:inline-block;
+#feature .fe-box h6 {
+    display: inline-block;
     padding: 9ps 8px 6px 8px;
     line-height: 2;
     border-radius: 4px;
@@ -227,13 +228,14 @@ body{
     text-align: center;
 }
 
-#product1 .pro-container{
+#product1 .pro-container {
     display: flex;
     justify-content: space-between;
     padding-top: 20px;
     flex-wrap: wrap;
 }
-#product1 .pro{
+
+#product1 .pro {
     width: 23%;
     min-width: 250px;
     padding: 10px 12px;
@@ -246,43 +248,44 @@ body{
     position: relative;
 }
 
-#product1 .pro:hover{
+#product1 .pro:hover {
     box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.06);
 }
 
-#product1 .pro img{
+#product1 .pro img {
     width: 100%;
     border-radius: 20px;
 }
 
-#product1 .pro .des{
+#product1 .pro .des {
     text-align: start;
     padding: 10px 0;
 }
 
-#product1 .pro .des span{
+#product1 .pro .des span {
     color: #606063;
     font-size: 12px;
 }
 
-#product1 .pro .des h5{
+#product1 .pro .des h5 {
     padding-top: 7px;
     color: #1a1a1a;
     font-size: 14px;
 }
-#product1 .pro .des i{
+
+#product1 .pro .des i {
     font-size: 12px;
     color: rgb(243, 181, 25);
 }
 
-#product1 .pro .des h4{
+#product1 .pro .des h4 {
     padding-top: 7px;
     font-size: 15px;
     font-weight: 700;
     color: #088178;
 }
 
-#product1 .pro .cart{
+#product1 .pro .cart {
     width: 40px;
     height: 40px;
     line-height: 40px;
@@ -308,33 +311,33 @@ body{
     background-position: center;
 }
 
-#banner h4{
-    color:#fff;
+#banner h4 {
+    color: #fff;
     font-size: 16px;
 }
 
-#banner h2{
+#banner h2 {
     color: #fff;
     font-size: 30px;
     padding: 10px 0;
 }
 
-#banner h2 span{
+#banner h2 span {
     color: #ef3636;
 }
 
-#banner button:hover{
+#banner button:hover {
     background: #088178;
     color: #fff;
 }
 
-#sm-banner{
+#sm-banner {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
 }
 
-#sm-banner .banner-box{
+#sm-banner .banner-box {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -347,30 +350,30 @@ body{
     padding: 30px;
 }
 
-#sm-banner .banner-box2{
+#sm-banner .banner-box2 {
     background-image: url("img/banner/b10.jpg");
 }
 
-#sm-banner h4{
+#sm-banner h4 {
     color: #fff;
     font-size: 20px;
     font-weight: 300;
 }
 
-#sm-banner h2{
+#sm-banner h2 {
     color: #fff;
     font-size: 28px;
     font-weight: 800;
 }
 
-#sm-banner span{
+#sm-banner span {
     color: #fff;
     font-size: 14px;
     font-weight: 500;
     padding-bottom: 15px;
 }
 
-#sm-banner .banner-box:hover button{
+#sm-banner .banner-box:hover button {
     background: #088178;
     border: 1px solid #088178;
 }
@@ -382,7 +385,7 @@ body{
     padding: 40px 80px;
 }
 
-#banner3 .banner-box{
+#banner3 .banner-box {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -392,31 +395,31 @@ body{
     height: 30vh;
     background-size: cover;
     background-position: center;
-    padding:20px;
+    padding: 20px;
     margin-bottom: 20px;
 }
 
-#banner3 .banner-box2{
+#banner3 .banner-box2 {
     background-image: url("img/banner/b4.jpg");
 }
 
-#banner3 .banner-box3{
+#banner3 .banner-box3 {
     background-image: url("img/banner/b18.jpg");
 }
 
-#banner3 h2{
-    color:#fff;
+#banner3 h2 {
+    color: #fff;
     font-weight: 900;
     font-size: 22px;
 }
 
-#banner3 h3{
+#banner3 h3 {
     color: #ec544e;
     font-weight: 800;
     font-size: 15px;
 }
 
-#newsletter{
+#newsletter {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
@@ -427,27 +430,28 @@ body{
     background-color: #041e42;
 }
 
-#newsletter h4{
+#newsletter h4 {
     font-size: 22px;
     font-weight: 700;
     color: #fff;
 }
 
-#newsletter p{
+#newsletter p {
     font-size: 14px;
     font-weight: 600;
     color: #818ea0;
-} 
+}
 
-#newsletter p span{
+#newsletter p span {
     color: #ffbd27;
 }
 
-#newsletter .form{
+#newsletter .form {
     display: flex;
     width: 40%;
 }
-#newsletter input{
+
+#newsletter input {
     height: 3.125rem;
     padding: 0 1.25em;
     font-size: 14px;
@@ -459,7 +463,7 @@ body{
     border-bottom-right-radius: 0;
 }
 
-#newsletter button{
+#newsletter button {
     background-color: #088178;
     color: #fff;
     white-space: nowrap;
@@ -467,69 +471,70 @@ body{
     border-bottom-left-radius: 0;
 }
 
-footer{
+footer {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
 }
 
-footer .col{
+footer .col {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     margin-bottom: 20px;
 }
 
-footer .logo{
+footer .logo {
     margin-bottom: 30px;
 }
 
-footer h4{
+footer h4 {
     font-size: 14px;
     padding-bottom: 20px;
 }
 
-footer h4{
+footer h4 {
     font-size: 14px;
-    padding-bottom: 20px ;
+    padding-bottom: 20px;
 }
 
-footer p{
+footer p {
     font-size: 13px;
-    margin:0 0 8px 0;
+    margin: 0 0 8px 0;
 }
 
-footer a{
+footer a {
     font-size: 13px;
     text-decoration: none;
     color: #222;
     margin-bottom: 10px;
 }
 
- footer .follow{
+footer .follow {
     margin-top: 20px;
- }
- footer .follow i{
+}
+
+footer .follow i {
     color: #465b52;
     padding-right: 4px;
     cursor: pointer;
- }
+}
 
-footer .install .row img{
+footer .install .row img {
     border: 1px solid #088178;
     border-radius: 6px;
 }
 
-footer .install img{
+footer .install img {
     margin: 10px 0 15px 0;
 }
 
 footer .follow i:hover,
-footer a:hover{
+footer a:hover {
     color: #088178;
 }
 
-footer .copyright{
+footer .copyright {
     width: 100%;
     text-align: center;
 }
@@ -549,15 +554,15 @@ footer .copyright{
 }
 
 #page-header h2,
-#page-header p{
-    color:#fff;
+#page-header p {
+    color: #fff;
 }
 
-#pagination{
+#pagination {
     text-align: center;
 }
 
-#pagination a{
+#pagination a {
     text-decoration: none;
     background-color: #088178;
     padding: 15px 20px;
@@ -566,7 +571,7 @@ footer .copyright{
     font-weight: 600;
 }
 
-#pagination a i{
+#pagination a i {
     font-size: 16px;
     font-weight: 600;
 
@@ -575,46 +580,46 @@ footer .copyright{
 
 /*   Single Product */
 
-#prodetails{
+#prodetails {
     display: flex;
     margin-top: 20px;
 }
 
-#prodetails .single-pro-image{
+#prodetails .single-pro-image {
     width: 40%;
     margin-right: 50px;
 }
 
-.small-img-group{
+.small-img-group {
     display: flex;
     justify-content: space-between;
 }
 
-.small-img-col{
+.small-img-col {
     flex-basis: 24%;
     cursor: pointer;
 }
 
-#prodetails .single-pro-details{
+#prodetails .single-pro-details {
     width: 50%;
     padding-top: 30px;
 }
 
-#prodetails .single-pro-details h4{
+#prodetails .single-pro-details h4 {
     padding: 40px 0 20px 0;
 }
 
-#prodetails .single-pro-details h2{
+#prodetails .single-pro-details h2 {
     padding: 26px;
 }
 
-#prodetails .single-pro-details select{
+#prodetails .single-pro-details select {
     display: block;
     padding: 5px 10px;
     margin-bottom: 10px;
 }
 
-#prodetails .single-pro-details input{
+#prodetails .single-pro-details input {
     width: 50px;
     height: 47px;
     padding-left: 10px;
@@ -622,31 +627,31 @@ footer .copyright{
     margin-right: 10px;
 }
 
-#prodetails .single-pro-details input:focus{
+#prodetails .single-pro-details input:focus {
     outline: none;
 }
 
-#prodetails .single-pro-details button{
+#prodetails .single-pro-details button {
     background: #088178;
     color: #fff;
 }
 
-#prodetails .single-pro-details span{
+#prodetails .single-pro-details span {
     line-height: 25px;
 }
 
 
 /*   Blog Page    */
 
-#page-header.blog-header{
+#page-header.blog-header {
     background-image: url("img/banner/b19.jpg");
 }
 
-#blog{
+#blog {
     padding: 150px 150px 0 150px;
 }
 
-#blog .blog-box{
+#blog .blog-box {
     display: flex;
     align-items: center;
     width: 100%;
@@ -654,22 +659,22 @@ footer .copyright{
     padding-bottom: 90px;
 }
 
-#blog .blog-img{
+#blog .blog-img {
     width: 50%;
     margin-right: 40px;
 }
 
-#blog img{
+#blog img {
     width: 100%;
     height: 300px;
     object-fit: cover;
 }
 
-#blog .blog-details{
+#blog .blog-details {
     width: 50%;
 }
 
-#blog .blog-details a{
+#blog .blog-details a {
     text-decoration: none;
     font-size: 11px;
     color: #000;
@@ -678,7 +683,7 @@ footer .copyright{
     transition: 0.3s;
 }
 
-#blog .blog-details a::after{
+#blog .blog-details a::after {
     content: "";
     width: 50px;
     height: 1px;
@@ -688,15 +693,15 @@ footer .copyright{
     right: -60px;
 }
 
-#blog .blog-details a:hover{
+#blog .blog-details a:hover {
     color: #088178;
 }
 
-#blog .blog-details a:hover::after{
+#blog .blog-details a:hover::after {
     background-color: #088178;
 }
 
-#blog .blog-box h1{
+#blog .blog-box h1 {
     position: absolute;
     top: -40px;
     left: 0;
@@ -705,12 +710,162 @@ footer .copyright{
     color: #c9cbca;
     z-index: -9;
 }
+
+/* About Us */
+
+#page-header.about-header {
+    background-image: url("img/about/banner.png");
+}
+
+#about-head {
+    display: flex;
+    height: auto;
+}
+
+#about-head img {
+    width: 50%;
+    height: auto;
+}
+
+#about-head div {
+    padding-left: 40px;
+}
+
+#about-app {
+    text-align: center;
+}
+
+#about-app .video {
+    width: 70%;
+    height: 100%;
+    margin: 30px auto 0 auto;
+}
+
+#about-app .video video {
+    width: 100%;
+    height: 100%;
+    border-radius: 30px;
+}
+
+
+/* Contact Us */
+
+#contact-details {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+#contact-details .details {
+    width: 40%;
+}
+
+#contact-details .details span,
+#form-details form span {
+    font-size: 12px;
+}
+
+#contact-details .details h2,
+#form-details form h2 {
+    font-size: 26px;
+    line-height: 35px;
+    padding: 20px 0;
+}
+
+#contact-details .details h3 {
+    font-size: 16px;
+    padding-bottom: 15px;
+}
+
+#contact-details .details li {
+    list-style: none;
+    display: flex;
+    padding: 10px 0;
+}
+
+#contact-details .details li i {
+    font-size: 14px;
+    padding-right: 22px;
+}
+
+#contact-details .details li p {
+    margin: 0;
+    font-size: 14px;
+}
+
+#contact-details .map {
+    width: 55%;
+    height: 400px;
+}
+
+#contact-details .map iframe {
+    width: 100%;
+    height: 100%;
+}
+
+#form-details {
+    display: flex;
+    justify-content: space-between;
+    margin: 30px;
+    padding: 80px;
+    border: 1px solid #e1e1e1;
+}
+
+#form-details form {
+    width: 65%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+#form-details form input,
+#form-details form textarea {
+    width: 100%;
+    padding: 12px 15px;
+    outline: none;
+    margin-bottom: 20px;
+    border: 1px solid #e1e1e1;
+}
+
+#form-details form button {
+    background-color: #088178;
+    color: #fff;
+}
+
+#form-details .people div {
+    padding-bottom: 25px;
+    display: flex;
+    align-items: flex-start;
+}
+
+#form-details .people div img {
+    width: 65px;
+    height: 65px;
+    object-fit: cover;
+    margin-right: 15px;
+}
+
+#form-details .people div p {
+    margin: 0;
+    font-size: 13px;
+    line-height: 25px;
+}
+
+#form-details .people div p span {
+    display: flex;
+    font-size: 16px;
+    font-weight: 600;
+    color: #000;
+}
+
+
 /* Media Query  */
 
 @media (max-width:799px) {
-    .section-p1{
+    .section-p1 {
         padding: 40px 40px;
     }
+
     #navbar {
         display: flex;
         flex-direction: column;
@@ -726,24 +881,27 @@ footer .copyright{
         padding: 80px 0 0 10px;
         transition: 0.3s;
     }
-    #navbar.active{
+
+    #navbar.active {
         right: 0px;
     }
-    #navbar li{
+
+    #navbar li {
         margin-bottom: 25px;
     }
+
     #mobile {
         display: flex;
         align-items: center;
     }
 
-    #mobile i{
-        color:#1a1a1a;
+    #mobile i {
+        color: #1a1a1a;
         font-size: 24px;
         padding-left: 20px;
     }
 
-    #close{
+    #close {
         display: initial;
         position: absolute;
         top: 30px;
@@ -751,110 +909,136 @@ footer .copyright{
         color: #222;
         font-size: 24px;
     }
-    #lg-bag{
+
+    #lg-bag {
         display: none;
     }
+
     #hero {
         height: 70vh;
         padding: 0 80px;
         background-position: top 30% right 30%;
     }
-    #feature{
+
+    #feature {
         justify-content: center;
     }
 
-    #feature .fe-box{
+    #feature .fe-box {
         margin: 15px 15px;
     }
 
-    #product1 .pro-container{
+    #product1 .pro-container {
         justify-content: center;
     }
 
-    #product1 .pro{
+    #product1 .pro {
         margin: 15px;
     }
 
-    #banner{
-       height: 20vh; 
+    #banner {
+        height: 20vh;
     }
-    #sm-banner .banner-box{
+
+    #sm-banner .banner-box {
         min-width: 100%;
         height: 30vh;
     }
-    #banner3{
+
+    #banner3 {
         padding: 0 40px;
     }
-    #banner3 .banner-box{
+
+    #banner3 .banner-box {
         width: 28%;
     }
-    #newsletter .form{
+
+    #newsletter .form {
         width: 70%;
     }
 
+    /* Contact Page */
+    #form-details {
+        padding: 40px;
+    }
+
+    #form-details form {
+        width: 50%;
+    }
+
+
 }
 
-@media (max-width: 477px){
-    #header{
+@media (max-width: 477px) {
+    #header {
         padding: 10px 30px;
     }
-    h1{
+
+    h1 {
         font-size: 30px;
     }
-    h2{
+
+    h2 {
         font-size: 32px;
     }
-    #hero{
+
+    #hero {
         padding: 0 20px;
         background-position: 55%;
     }
+
     #feature {
         justify-content: space-between;
     }
-    #feature .fe-box{
-        width: 155px;
+
+    #feature .fe-box {
+        width: 140px;
         margin: 0 0 15px 0;
     }
 
-    #product1 .pro{
+    #product1 .pro {
         width: 100%;
     }
-    #banner{
+
+    #banner {
         height: 40vh;
     }
-    #sm-banner .banner-box{
+
+    #sm-banner .banner-box {
         height: 40vh;
     }
-    #sm-banner .banner-box2{
+
+    #sm-banner .banner-box2 {
         margin-top: 20px;
     }
 
-    #banner3{
+    #banner3 {
         padding: 0 20px;
     }
-    #banner3 .banner-box{
-      width: 100%;
-    }
 
-    #newsletter{
-        padding: 40px 20px;
-    }
-
-    #newsletter .form{
+    #banner3 .banner-box {
         width: 100%;
     }
 
-    footer .copyright{
+    #newsletter {
+        padding: 40px 20px;
+    }
+
+    #newsletter .form {
+        width: 100%;
+    }
+
+    footer .copyright {
         text-align: start;
     }
 
-/* Single Product */
+    /* Single Product */
     #prodetails {
         display: flex;
         flex-direction: column;
     }
 
-    #prodetails .single-pro-image{
+    #prodetails .single-pro-image {
         width: 100%;
         margin-right: 0px;
     }
@@ -863,28 +1047,71 @@ footer .copyright{
         width: 100%;
     }
 
-/* Blog Page */
+    /* Blog Page */
 
-    #blog{
+    #blog {
         padding: 100px 20px 0 20px;
     }
 
-    #blog .blog-box{
+    #blog .blog-box {
         display: flex;
         flex-direction: column;
         align-items: flex-start;
     }
 
-    #blog .blog-img{
+    #blog .blog-img {
         width: 100%;
         margin-right: 0px;
         margin-bottom: 30px;
     }
 
-    #blog .blog-details{
+    #blog .blog-details {
         width: 100%;
     }
 
+
+    /* About Page */
+
+    #about-head {
+        flex-direction: column;
+        ;
+    }
+
+    #about-head img {
+        width: 100%;
+        margin-bottom: 20px;
+    }
+
+    #about-head div {
+        padding-left: 0px;
+    }
+
+    #about-app .video {
+        width: 100%;
+    }
+
+    /* Contact Page */
+
+    #contact-details {
+        flex-direction: column;
+    }
+
+    #contact-details .details {
+        width: 100%;
+        margin-bottom: 30px;
+    }
+
+    #contact-details .map{
+        width: 100%;
+    }
+
+    #form-details{
+        margin: 10px;
+        padding: 30px 10px;
+        flex-wrap: wrap;
+    }
+    #form-details form{
+        width: 100%;
+        margin-bottom: 30px;
+    }
 }
-
-
